[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigo_thorlabs_stage"
version = "0.2.0"
description = "Plugin to use Thorlabs motorized stages (multiple versions) with Dirigo."
authors = [
    {name = "T. D. Weber", email = "tweber@mit.edu"}
]
license = {text = "MIT"}
dependencies = [
    "dirigo",
    "pythonnet>=3.0.1", # Required to used the .NET framework
    "pyserial" # For MCM3000
]

# new format
[project.entry-points."dirigo.devices.stage"]
bbd102 = "dirigo_thorlabs_stage:BBD102Stage"
bbd202 = "dirigo_thorlabs_stage:BBD202Stage"

[project.entry-points."dirigo.devices.objective_actuator"]
mcm3000 = "dirigo_thorlabs_stage:MCM3000"