[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigo_thorlabs_stage"
version = "0.2.1"
description = "Plugin to use Thorlabs motorized stages (multiple versions) with Dirigo"
authors = [
    {name = "T. D. Weber", email = "tweber@mit.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: System :: Hardware"
]
dependencies = [
    "dirigo",
    "pythonnet>=3.0.1", # Required to used the .NET framework (Kinesis)
    "pyserial" # For MCM3000
]
urls = {"Homepage" = "https://github.com/dirigo-developers/dirigo-thorlabs-stage"}


[project.entry-points."dirigo_stages"]
bbd102 = "dirigo_thorlabs_stage.bbdx02:BBD102Stage"
bbd202 = "dirigo_thorlabs_stage.bbdx02:BBD202Stage"
prm1z8 = "dirigo_thorlabs_stage.dcservo:PRM1Z8"

[project.entry-points."dirigo_scanners"]
mcm3000 = "dirigo_thorlabs_stage.mcm3000:MCM3000"

# new format
[project.entry-points."dirigo.devices.stage"]
bbd102 = "dirigo_thorlabs_stage.bbdx02:BBD102Stage"
bbd202 = "dirigo_thorlabs_stage.bbdx02:BBD202Stage"
prm1z8 = "dirigo_thorlabs_stage.dcservo:PRM1Z8"

[project.entry-points."dirigo.devices.objective_actuator"]
mcm3000 = "dirigo_thorlabs_stage:MCM3000"